add mobile controller

--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
             width: 100%;
             height: 100%;
         }
+        #joystick {
+            position: fixed;
+            bottom: 50px;
+            left: 50px;
+            z-index: 1000;
+        }
     </style>
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.10.1/nipplejs.min.js"></script>
     <script type="module" src="/main.js"></script>
 </body>
 </html> 
